log
Fri Mar 18 14:26:15 UTC 2022: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
bba1ae8
Fri Mar 18 14:29:30 UTC 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|5
total_score: 15/70
3cb79ff
Fri Mar 18 14:36:15 UTC 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  3|5
total_score: 15/70
17084d6
Fri Mar 18 14:50:37 UTC 2022: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:49:11: error: ‘List {aka struct List}’ has no member named ‘cuurent’; did you mean ‘current’?
     list->cuurent =list->current->next;
           ^~~~~~~
           current
list.c:50:11: error: expected expression before ‘->’ token
     return->list->current->data;
           ^~
Compilation failed
644b2b5
Fri Mar 18 14:50:47 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:49:11: error: ‘List {aka struct List}’ has no member named ‘cuurent’; did you mean ‘current’?
     list->cuurent =list->current->next;
           ^~~~~~~
           current
Compilation failed
5c61f9e
Fri Mar 18 14:50:53 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
88ac92d
Fri Mar 18 14:54:09 UTC 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  9|3
total_score: 35/70
897eda2
Fri Mar 18 15:01:07 UTC 2022: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘pushFront’:
list.c:79:7: error: ‘List {aka struct List}’ has no member named ‘size’
   list->size++;
       ^~
Compilation failed
063d7c3
Fri Mar 18 15:01:29 UTC 2022: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
1d33d1b
Fri Mar 18 15:02:43 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
9de6736
Fri Mar 18 15:09:49 UTC 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  10|2
total_score: 45/70
656207e
Fri Mar 18 17:02:52 UTC 2022: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘pushCurrent’:
list.c:90:16: error: implicit declaration of function ‘createnode’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
   Node *node = createnode(data);
                ^~~~~~~~~~
                createNode
list.c:90:16: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
list.c:93:9: error: ‘List {aka struct List}’ has no member named ‘next’
     list->next->prev=node;
         ^~
cc1: all warnings being treated as errors
Compilation failed
20ce7e3
Fri Mar 18 17:12:06 UTC 2022: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘pushCurrent’:
list.c:90:16: error: implicit declaration of function ‘createnode’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
   Node *node = createnode(data);
                ^~~~~~~~~~
                createNode
list.c:90:16: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
list.c:97:10: error: expected ‘(’ before ‘{’ token
   else if{
          ^
list.c:100:10: error: expected ‘(’ before ‘{’ token
   else if{
          ^
cc1: all warnings being treated as errors
Compilation failed
8119808
Fri Mar 18 17:18:44 UTC 2022: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘pushCurrent’:
list.c:90:16: error: implicit declaration of function ‘createnode’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
   Node *node = createnode(data);
                ^~~~~~~~~~
                createNode
list.c:90:16: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
list.c:97:3: error: this ‘else’ clause does not guard... [-Werror=misleading-indentation]
   else
   ^~~~
list.c:100:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘else’
     list->head=node;
     ^~~~
cc1: all warnings being treated as errors
Compilation failed
c9de77c
Sun Mar 20 13:46:40 UTC 2022: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘pushCurrent’:
list.c:90:16: error: implicit declaration of function ‘createnode’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
   Node *node = createnode(data);
                ^~~~~~~~~~
                createNode
list.c:90:16: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
list.c:94:5: error: expected ‘;’ before ‘list’
     list->current->prev=node;
     ^~~~
list.c:98:3: error: this ‘else’ clause does not guard... [-Werror=misleading-indentation]
   else
   ^~~~
list.c:101:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘else’
     list->head=node;
     ^~~~
cc1: all warnings being treated as errors
Compilation failed
562934b
Sun Mar 20 13:46:59 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘pushCurrent’:
list.c:94:5: error: expected ‘;’ before ‘list’
     list->current->prev=node;
     ^~~~
list.c:98:3: error: this ‘else’ clause does not guard... [-Werror=misleading-indentation]
   else
   ^~~~
list.c:101:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘else’
     list->head=node;
     ^~~~
cc1: all warnings being treated as errors
Compilation failed
0536dca
Sun Mar 20 13:47:08 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘pushCurrent’:
list.c:98:3: error: this ‘else’ clause does not guard... [-Werror=misleading-indentation]
   else
   ^~~~
list.c:101:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘else’
     list->head=node;
     ^~~~
cc1: all warnings being treated as errors
Compilation failed
ce2c448
